fixed responsiveness on mobile and other bugs on larger viewports

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 main {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .left {
@@ -57,7 +58,7 @@ header {
 section h2 {
     font-size: 6rem;
     font-weight: bolder;
-    width: 70%;
+    width: 75%;
     line-height: .8em;
     font-family: 'Chau Philomene One', sans-serif;
     color: #2a2a2a;
@@ -114,16 +115,21 @@ footer p {
     justify-content: center;
     padding-left: 5em;
     background: #2a2a2a;
+    gap: .3em;
 }
 
 .tiles-wrapper {
     position: relative;
+    gap: .3em;
+}
+
+.tile:first-child {
+    margin-bottom: .35em;
 }
 
 .tile {
     padding: 1.2em;
     background: #76d085;
-    margin-bottom: .3em;
     border-radius: 7px;
     cursor: pointer;
     transition: all .4s;
@@ -159,7 +165,7 @@ footer p {
 
 /* tablets */
 
-@media (max-width: 768px) {
+@media (max-width: 912px) {
     .left {
         width: 40%;
     }
@@ -169,7 +175,8 @@ footer p {
     }
     
     section h2 {
-        font-size: 3rem;
+        font-size: 3.2rem;
+        width: 90%;
     }
     
     footer p {
@@ -198,11 +205,11 @@ footer p {
         background: #2a2a2a;
     }
     
-};
+}
 
 /* mobiles */
 
-@media (max-width: 425px){
+@media (max-width: 425px ){
     main {
         flex-direction: column;
     }
@@ -234,16 +241,15 @@ footer p {
         width: 100%;
         height: 25%;
         padding: 0;
-        padding-top: 0;
         align-items: center;
         padding-top: 4.5em;
-        overflow: hidden;
     }
 
     .right-container {
         width: 60%;
         padding-left: 0;
         transform: rotate(90deg);
+        overflow: visible;
     }
 
     .tiles-wrapper {
@@ -289,6 +295,44 @@ footer p {
     .tag {
         width: 40px;
         padding: .3em;
+        font-size: .9rem;
+    }
+}
+
+@media (max-width: 280px) {
+
+    .left {
+        padding: 1em;
+    }
+
+    section h2 {
+        font-size: 2.5rem;
+        line-height: 1em;
+        width: 90%;
+    }
+
+    footer p {
+        font-size: .9rem;
+        width: 90%;
+    }
+
+    .sign {
+        font-size: .7rem;
+    }
+
+    .sign-img img {
+        height: 10px;
+        display: inline;
+        margin-bottom: -.15em;
+    }
+
+    .tile {
+        padding: .65em;
+    }
+    
+    .tag {
+        width: 30px;
+        padding: .2em;
         font-size: .9rem;
     }
 }
